# alt-exam_automated_theorem_proving

./: .gitignore  alt-exam.cabal
app/: Main.hs
src/: Expressions.hs  FirstOrder.hs  Fol.hs  Formula.hs  FormulaSyn.hs  Logic.hs  Parser.hs  Printer.hs  Prop.hs  Resolution.hs  Skolem.hs  Tableaux.hs  Unif.hs  Utils.hs
src/ATP/: Bdd.hs  Combining.hs  Completion.hs  Complex.hs  Cong.hs  Cooper.hs  Decidable.hs  DefCnf.hs  Dlo.hs  Dp.hs  EqElim.hs  Equal.hs  Fol.hs  Formula.hs  FormulaSyn.hs  Geom.hs  Grobner.hs  Herbrand.hs  Interpolation.hs  Intro.hs  IntroSyn.hs  MPoly.hs  Meson.hs  Order.hs  Paramodulation.hs  Poly.hs  Prolog.hs  Prop.hs  PropExamples.hs  Qelim.hs  Real.hs  Resolution.hs  Rewrite.hs  Skolem.hs  Stal.hs  Tableaux.hs  TestFormulas.hs  Unif.hs
src/ATP/Test/: Combining.hs  Complex.hs  Cooper.hs  Dlo.hs  Fo.hs  Grobner.hs  Real.hs  Taut.hs
src/ATP/Util/: Debug.hs  Impossible.hs  Lex.hs  Lib.hs  List.hs  ListSet.hs  Log.hs  Misc.hs  Monad.hs  Prelude.hs  Print.hs  TH.hs  Tuple.hs  UnionFind.hs
src/ATP/Util/Log/: Class.hs
src/ATP/Util/Parse/: Parse.hs
src/ATP/Util/Print/: Print.hs
src/Expressions/: Expressions.hs  Parser.hs  Printer.hs
src/Util/: JSON.hs  Lex.hs  Lib.hs  List.hs  ListSet.hs  Log.hs  Monad.hs  Parse.hs  Prelude.hs  Print.hs  TH.hs
src/Util/Log/: Class.hs
src/Util/Parse/: Parse.hs
src/Util/Print/: Print.hs
utils/: LHStoHS.py
