name:                 alt-exam
version:              0.9.0
build-type:           Simple
cabal-version:        >= 1.10

license:              GPL
category:             First order logic algorithms
synopsis:             Haskell theorem proving algorithms.
description:          A Haskell port of the code parts from John Harrison's book
                      "Handbook of Practical Logic and Automated Reasoning".

library
  hs-source-dirs: src

  include-dirs: src

  exposed-modules:  Fol
                    Formula
                    FormulaSyn
                    Prop
                    Resolution
                    Skolem
                    Tableaux
                    Unif
                    Util.Lex
                    Util.Lib
                    Util.List
                    Util.ListSet
                    Util.Log
                    Util.Log.Class
                    Util.Print
                    Util.Print.Print
                    Util.Parse
                    Util.Parse.Parse
                    Util.Monad
                    Util.Prelude
                    Util.TH

  build-depends:  base >= 4.7 && < 5,
                  containers >= 0.2.0.1,
                  mtl >= 1.1.0.2,
                  parsec >= 2.0,
                  directory >= 1.2.6.2,
                  HUnit >= 1.2.2.0,
                  pretty >= 1.0.1.0,
                  QuickCheck >= 2.1,
                  template-haskell >= 2.3.0.1,
                  hslogger >= 1.0.7,
                  syb >= 0.1.0.1

  default-extensions: NoImplicitPrelude
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      TypeSynonymInstances
                      FlexibleInstances
                      DeriveDataTypeable
                      TemplateHaskell
                      QuasiQuotes
                      UnicodeSyntax
                      CPP

  default-language: Haskell2010

  ghc-options:  -Wall
                -fwarn-implicit-prelude
                -fwarn-monomorphism-restriction
                -fwarn-incomplete-record-updates
                -fwarn-tabs
                -fno-ignore-asserts
                -optL -q

executable alt-exam-exe
  hs-source-dirs: app

  include-dirs: app

  main-is:  Main.hs

  ghc-options:  -threaded -rtsopts -with-rtsopts=-N
                -fno-ignore-asserts
                -optL -q

  build-depends:  base,
                  alt-exam

  default-language: Haskell2010

  default-extensions: NoImplicitPrelude
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      TypeSynonymInstances
                      FlexibleInstances
                      DeriveDataTypeable
                      TemplateHaskell
                      QuasiQuotes
                      CPP

test-suite alt-exam-test
  type: exitcode-stdio-1.0

  hs-source-dirs: test

  main-is:  Spec.hs

  build-depends:  base,
                  alt-exam

  ghc-options:  -threaded -rtsopts -with-rtsopts=-N

  default-language: Haskell2010
